--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <center>
     <h1 class="btn btn-info heading">Object Detection</h1>
  <h2 id="status" class="btn btn-danger">Status : </h2>
+ <h2 id="no_of_objects" class="btn btn-warning"></h2>
   </center>
 
   <script src="main.js"></script>
